# tetris-bot

./: .gitignore  ARCHITECTURE_RECOMMENDATIONS.md  CLAUDE.md  GRADIENT_CLIPPING_PLAN.md  README.md  beam_search.py  features.py  fileParsing.py  inferenceUI.py  inference_ui.py  mcts.py  model.py  model_v2.py  preparse_games.py  pvp_game.py  pyproject.toml  tetrisEngine.py
replay_pvp/: manifest.json
rl/: __init__.py  arena.py  model_loader.py  pipeline.py  replay_buffer.py  schemas.py  search.py  selfplay.py  selfplay_buffer.py  selfplay_v2.py  training.py
tests/: conftest.py  test_cache_v3_schema.py  test_generate_selfplay_buffer_smoke.py  test_model_loader.py  test_replay_alignment_report.py  test_rollout_terminal.py  test_root_state_restore.py  test_selfplay_buffer.py  test_selfplay_search.py  test_tetrisformer_fixes.py  test_validation_epoch_reset.py
tests/tetriszero/: __init__.py  fixtures.py  test_arena.py  test_beam_search.py  test_engine_helpers.py  test_features.py  test_inference_ui.py  test_mcts.py  test_model_v2.py  test_pipeline.py  test_pvp_game.py  test_replay_buffer.py  test_selfplay_v2.py  test_training.py
tetrisformer/: __init__.py  fileParsing.py  inferenceUI.py  model.py  preparse_games.py
tetrisformer/rl/: __init__.py  model_loader.py  search.py  selfplay.py
tetrisformer/tests/: conftest.py  test_cache_v3_schema.py  test_generate_selfplay_buffer_smoke.py  test_model_loader.py  test_replay_alignment_report.py  test_rollout_terminal.py  test_root_state_restore.py  (+4 more)
tools/: generate_selfplay_buffer.py  replay_alignment_report.py
(+3 files in other folders)
