[project]
name = "tetrio"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
  "numba>=0.61.2",
  "numpy>=2.3.0",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "pygame>=2.5.0",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
